fix (ProductMaterial) wrap <Select />

--- a/src/pages/Store/Product/ProductMaterial.scss
+++ b/src/pages/Store/Product/ProductMaterial.scss
@@ -22,3 +22,7 @@
     color: $color_red;
   }
 }
+
+.select {
+  max-width: 20.625rem;
+}
